deploy/k8s/overlays/prod/indexer-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opake-indexer
spec:
  template:
    spec:
      containers:
        - name: indexer
