deploy/k8s/overlays/prod/web-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opake-web
spec:
  replicas: 2
